tests/invalid/array_member_requires_mutable_receiver.wio
fn Entry() -> i32 {
    let values: i32[] = [1, 2, 3];
    values.Push(4);
    return 0;
}
